--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-bg{
+  width: 350px;
+  height: 596px;
+  border-radius: 15px;
+  background-color: rgba(21, 38, 63, 1);
+  box-shadow: 0px 25px 50px;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding-top: 20px;
+  /* align-items: flex-end; */
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.img-rect{
+  /* border-radius: 20px; */
+  background-image: url();
+  /* overflow: hidden; */
+}
+img{
+  border-radius: 8px;
+  height: 302px;
+  object-fit: cover;
+}
+.equil-text{
+  position: absolute;
+  padding: 300px;
+  left: 170px;
+}
+.main-text{
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 600;
+font-size: 22px;
+line-height: 28px;
+color: #ffff;
+}
+.our-eqiul{
+  position: absolute;
+  padding: 350px;
+  left: 120px;
+  
+}
+.our-equil-text{
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 26px;
+  color: #8BACD9;;
+}
+.comb-shape{
+  position: absolute;
+  left: 0%;
+  margin-top: 35%;
+  padding-left: 37.5%;
+}
+.comb-shape img{
+width: 11px;
+height: 18px;
+}
+.eth{
+position: absolute;
+left: 6%;
+margin:0 auto;
+padding: 33.5%;
+}
+.text-eth{
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+   color: rgba(0, 255, 248, 1);
+
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
