--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
-body {
+*{
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
+}
+
+
+body {
+  margin: 0 auto;
+  background-color: #0D192C;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
