--- a/src/App.css
+++ b/src/App.css
@@ -1,77 +1,10 @@
-.card-bg{
-  width: 350px;
-  height: 596px;
-  border-radius: 15px;
-  background-color: rgba(21, 38, 63, 1);
-  box-shadow: 0px 25px 50px;
-  margin: 0 auto;
-  display: flex;
-  padding-top: 20px;
-  /* align-items: flex-end; */
-  justify-content: center;
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background: #0d192c;
 }
-.img-rect{
-  /* border-radius: 20px; */
-  background-image: url();
-  /* overflow: hidden; */
-}
-img{
-  border-radius: 8px;
-  height: 302px;
-  object-fit: cover;
-}
-.equil-text{
-  position: absolute;
-  padding: 300px;
-  left: 170px;
-}
-.main-text{
-font-family: 'Outfit';
-font-style: normal;
-font-weight: 600;
-font-size: 22px;
-line-height: 28px;
-color: #ffff;
-}
-.our-eqiul{
-  position: absolute;
-  padding: 350px;
-  left: 120px;
-  
-}
-.our-equil-text{
-  font-family: 'Outfit';
-  font-style: normal;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 26px;
-  color: #8BACD9;;
-}
-.comb-shape{
-  position: absolute;
-  left: 0%;
-  margin-top: 35%;
-  padding-left: 37.5%;
-}
-.comb-shape img{
-width: 11px;
-height: 18px;
-}
-.eth{
-position: absolute;
-left: 6%;
-margin:0 auto;
-padding: 33.5%;
-}
-.text-eth{
-  font-family: 'Outfit';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 20px;
-   color: rgba(0, 255, 248, 1);
 
-}
 
 
 
