--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-body {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  background: #0d192c;
-}
 
+
+/* .App {
+  border-radius: 15px;
+  
+  box-shadow: 0px 25px 50px;
+  justify-content: center;
+  align-items: center;
+} */
 
 
 
