--- a/src/Card.css
+++ b/src/Card.css
@@ -1,76 +1,81 @@
-.App {
-    width: 350px;
-    height: 596px;
-    border-radius: 15px;
-    background-color: rgba(21, 38, 63, 1);
-    box-shadow: 0px 25px 50px;
-    margin: 0 auto;
-    display: flex;
-    padding-top: 20px;
-    /* align-items: flex-end; */
-    justify-content: center;
+*{
+  margin: 0;
+  padding: 0;
+  
+}
+
+body {
+  background-color: hsl(217, 54%, 11%);
+  width: 100%;
+  height: 100%;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card{
+  background-color: hsl(216, 50%, 16%)!important;
+  border-radius: 15px;
+  box-shadow: 0px 25px 50px;
+  width: 302px;
+  padding: 1.5rem;
+
+} 
+.image{
+   border-radius: 8px;
   }
-  .img-rect {
-    /* border-radius: 20px; */
-    background-image: url();
-    /* overflow: hidden; */
-  }
-  img {
+  .main-img{
+    width: 100%;
+    height: 100%;
     border-radius: 8px;
-    height: 302px;
-    object-fit: cover;
   }
-  .equil-text {
-    position: absolute;
-    /* padding: 300px;
-    left: 170px; */
-  }
-  .main-text {
-    font-family: "Outfit";
-    font-style: normal;
-    font-weight: 600;
+  h3{
+    font-family: 'Outfit';
+    margin-top: 1.5rem;
     font-size: 22px;
     line-height: 28px;
-    color: #ffff;
+    color: #FFFFFF;
+    font-weight: 600;
   }
-  .our-eqiul {
-    position: absolute;
-    /* padding: 350px;
-    left: 120px; */
-    padding-top: 40px;
-  }
-  .our-equil-text {
-    font-family: "Outfit";
+  .our-eqiul{
+    font-family: 'Outfit';
     font-style: normal;
     font-weight: 300;
     font-size: 18px;
+    margin: 1.5rem 0 1rem 0;
+    color: rgba(139, 172, 217, 1);
     line-height: 26px;
-    color: #8bacd9;
+    ;
   }
-  .comb-shape {
-    position: absolute;
-    /* left: 0%;
-    margin-top: 35%;
-    padding-left: 37.5%; */
-    padding-top: 8rem;
+  .price{
+   font-family: 'Outfit';
+   font-style: normal;
+   font-weight: 600;
+   font-size: 16px;
+   line-height: 20px;
+   display: flex;
+   align-items: center;
+   color: #00FFF8;
+   letter-spacing: 1px;
   }
-  .comb-shape img {
-    width: 11px;
-    height: 18px;
+  .price img{
+    margin-right: 3px;
   }
-  .eth {
-    position: absolute;
-    /* left: 6%;
-    margin: 0 auto;
-    padding: 33.5%; */
-    padding-top: 7rem;
-    margin: 0 20px;
+  .days{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid  rgba(46, 64, 90, 1);
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
   }
-  .text-eth {
-    font-family: "Outfit";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
-    color: rgba(0, 255, 248, 1);
-  }
+  
+  /* span::before{
+    content: "\a";
+    white-space: pre;
+  } */
+  
+  
+  
+  
+ 
