--- a/src/Card.css
+++ b/src/Card.css
@@ -23,15 +23,29 @@ body {
 
 } 
 .image{
-    border-radius: 8px;
     position: relative;
 
   }
-  .image div {
+  .eye {
     position: absolute;
     top: 0;
-    background: rgba(0, 255, 248, 1);
+    background:  rgba(0, 255, 248, 1);
+    
+    width: 100%;
+    height: 100%;
+    opacity: 0;
   }
+  .eye-img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+  .image .eye:hover{
+    opacity: 0.5;
+    cursor: pointer;
+  }
+  
   .main-img{
     width: 100%;
     height: 100%;
