--- a/src/Card.module.css
+++ b/src/Card.module.css
@@ -26,6 +26,11 @@ body {
     position: relative;
 
   }
+  .main_img{
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+  }
   .eye {
     position: absolute;
     top: 0;
@@ -35,7 +40,7 @@ body {
     height: 100%;
     opacity: 0;
   }
-  .eye-img{
+  .eye_img{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -44,12 +49,6 @@ body {
   .image .eye:hover{
     opacity: 0.5;
     cursor: pointer;
-  }
-  
-  .main-img{
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
   }
   
   h3{
@@ -61,7 +60,7 @@ body {
     font-weight: 600;
     /* cursor: pointer; */
   }
-  .our-eqiul{
+  .our_eqiul{
     font-family: 'Outfit';
     font-style: normal;
     font-weight: 300;
@@ -71,7 +70,7 @@ body {
     line-height: 26px;
     
   }
-  .our-eqiul span,h3{
+  .our_eqiul span,h3{
     cursor: pointer;
   }
   .price{
@@ -89,7 +88,7 @@ body {
   .price img{
     margin-right: 5px;
   }
-  .days-price{
+  .days_price{
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid  rgba(46, 64, 90, 1);
@@ -108,19 +107,19 @@ body {
   .days img{
     margin-right:  5px;
   }
-  .oval-img{
+  .oval_img{
     display: flex;
     align-items: center;
     color: #8BACD9;;
   }
-  .oval-img span{
+  .oval_img span{
     color:  #FFFFFF;
     font-size: 16px;
     line-height: 20px;
     margin-left: 0.5rem;
     cursor: pointer;
   }
-  .oval-img img{
+  .oval_img img{
     box-sizing: border-box;
     border: 1px solid #FFFFFF;
     border-radius: 50%;
