--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,18 @@
+*{
+  margin: 0;
+  padding: 0;
+  
+}
 
+body {
+  background-color: hsl(217, 54%, 11%);
+  width: 100%;
+  height: 100%;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* .App {
   border-radius: 15px;
