--- a/src/Card.module.css
+++ b/src/Card.module.css
@@ -1,11 +1,11 @@
-/* .card{
+.card{
   background-color: hsl(216, 50%, 16%)!important;
   border-radius: 15px;
   box-shadow: 0px 25px 50px;
   width: 302px;
   padding: 1.5rem;
 
-}  */
+} 
 .image{
     position: relative;
 
